Fix: moved nav bar to top on portrait screens so that nav bars don't cover them on iOS

--- a/css/style.scss
+++ b/css/style.scss
@@ -549,7 +549,7 @@ img {
 
 	.intro {
 		position: absolute;
-		margin-top: 20%;
+		margin-top: 35%;
 		height: 50%;
 
 		.title {
@@ -590,7 +590,7 @@ img {
 
 	.header {
 		position: absolute;
-		bottom: 0;
+		top: 2%;
 		left: 0;
 		right:0;
 		width: 90%;
@@ -642,7 +642,7 @@ img {
 @media screen and (max-width: 500px) and (min-width: 325px) and (orientation: portrait){
 	.intro {
 		position: absolute;
-		top: 10%;
+		top: 20%;
 		height: 50%;
 		.title {
 			font-size: 1.2em;
@@ -681,7 +681,7 @@ img {
 
 	.header {
 		position: absolute;
-		bottom: 0;
+		top: 2%;
 		left: 0;
 		right:0;
 		width: 90%;
